# Simulador-de-Batallas-Pokemon

./: .gitignore  pyproject.toml
SimuladorDeBatallasPokemon/: db.sqlite3  manage.py  test.py
SimuladorDeBatallasPokemon/Batallas/: apps.py  consumers.py  models.py  routing.py  test.py  urls.py  views.py
SimuladorDeBatallasPokemon/Batallas/migrations/: 0001_initial.py
SimuladorDeBatallasPokemon/Batallas/static/: websockets.js  websocketsBatallas.js
SimuladorDeBatallasPokemon/Batallas/templates/: batalla.html  buscarBatalla.html  invitacionesPendientes.html  test.html
SimuladorDeBatallasPokemon/CargadorDeDatos/: CachePokemonsGeneracionUno.sqlite  apps.py  cargadorDeDatos.py  obtenerDatosDePokeAPI.py
SimuladorDeBatallasPokemon/ClasesAuxiliares/: FormateadorDeDatos.py  FormateadorDeStrings.py  GeneradorDeValoresAlAzar.py
SimuladorDeBatallasPokemon/CreacionDeEquipos/: apps.py  models.py  urls.py  views.py
SimuladorDeBatallasPokemon/Equipos/: formularios.py  models.py  urls.py  views.py
SimuladorDeBatallasPokemon/InsercionesABaseDeDatos/: apps.py  efectuarInsercionesABaseDeDatos.py  formatearDatosParaInsercionABaseDeDatos.py  levantarBaseDeDatos.py  test.py  tests.py
SimuladorDeBatallasPokemon/Pokemons/: apps.py  models.py  test.py  tests.py  urls.py  views.py
SimuladorDeBatallasPokemon/SimuladorDeBatallasPokemon/: asgi.py  settings.py  urls.py  views.py  wsgi.py
SimuladorDeBatallasPokemon/Usuarios/: apps.py  forms.py  models.py  urls.py  views.py
SimuladorDeBatallasPokemon/static/css/: estilos.css
SimuladorDeBatallasPokemon/templates/: index.html
(+47 files in other folders)
