[tool.poetry]
name = "simulador de batallas online"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
djangorestframework = "^3.14.0"
requests-cache = "^1.1.0"
pillow = "^10.2.0"
channels = "4.0.0"
daphne = "^4.1.0"
django-redis = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
